--- a/sources/set.web/Views/User/PasswordChange.cshtml
+++ b/sources/set.web/Views/User/PasswordChange.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PasswordChangeModel
 
 @{
-    ViewBag.Title = Html.LocalizationString("password_change_title"); ;
+    ViewBag.Title = Html.Localize("password_change_title"); ;
 }
 
 <div class="row">
@@ -17,7 +17,7 @@
         <form method="post">
 
             <div class="form-group">
-                <label for="Password">@Html.LocalizationString("new_password")</label>
+                <label for="Password">@Html.Localize("new_password")</label>
                 <input type="password" id="Password" name="Password" class="form-control" required />
             </div>
 
@@ -25,7 +25,7 @@
 
             @Html.AntiForgeryToken()
 
-            <button type="submit" class="btn btn-primary">@Html.LocalizationString("btn_save")</button>
+            <button type="submit" class="btn btn-primary">@Html.Localize("btn_save")</button>
 
         </form>
 
