--- a/sources/set.web/Views/Admin/ContactMessages.cshtml
+++ b/sources/set.web/Views/Admin/ContactMessages.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PageModel<ContactMessageModel>
 
 @{
-    ViewBag.Title = Html.LocalizationString("contactmessages_listing_title");
+    ViewBag.Title = Html.Localize("contactmessages_listing_title");
     const string link = "/admin/contactmessages";
 }
 
@@ -16,9 +16,9 @@
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
-                    <th>@Html.LocalizationString("email")</th>
-                    <th>@Html.LocalizationString("subject")</th>
-                    <th>@Html.LocalizationString("message")</th>
+                    <th>@Html.Localize("email")</th>
+                    <th>@Html.Localize("subject")</th>
+                    <th>@Html.Localize("message")</th>
                 </tr>
             </thead>
             <tbody id="tbodyModelItems">
@@ -50,7 +50,7 @@
                                         }
                                     </ul>
                                     <br />
-                                    <span class="label label-primary">@Html.LocalizationString("total_page_count") : @Model.TotalPageCount</span>
+                                    <span class="label label-primary">@Html.Localize("total_page_count") : @Model.TotalPageCount</span>
                                 }
                             }
                         </div>
