--- a/sources/set.web/Views/Admin/Users.cshtml
+++ b/sources/set.web/Views/Admin/Users.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PageModel<UserModel>
 
 @{
-    ViewBag.Title = Html.LocalizationString("all_users_title");
+    ViewBag.Title = Html.Localize("all_users_title");
     const string link = "/admin/users";
 }
 
@@ -17,15 +17,15 @@
             <thead>
                 <tr>
                     <th></th>
-                    <th>@Html.LocalizationString("name")</th>
-                    <th>@Html.LocalizationString("email")</th>
-                    <th>@Html.LocalizationString("user_role")</th>
+                    <th>@Html.Localize("name")</th>
+                    <th>@Html.Localize("email")</th>
+                    <th>@Html.Localize("user_role")</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model.Items)
                 {
-                    var val = item.IsActive ? Html.LocalizationString("btn_deactivate") : Html.LocalizationString("btn_activate");
+                    var val = item.IsActive ? Html.Localize("btn_deactivate") : Html.Localize("btn_activate");
                     var buttonCss = item.IsActive ? "btn-warning" : "btn-success";
                     <tr>
                         <td>
@@ -61,7 +61,7 @@
                                         }
                                     </ul>
                                     <br />
-                                    <span class="label label-primary">@Html.LocalizationString("total_page_count") : @Model.TotalPageCount</span>
+                                    <span class="label label-primary">@Html.Localize("total_page_count") : @Model.TotalPageCount</span>
                                 }
                             }
                         </div>
@@ -79,14 +79,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <input type="button" class="close" data-dismiss="modal" aria-hidden="true" value="&times;" />
-                <h4 class="modal-title">@Html.LocalizationString("modal_title_users")</h4>
+                <h4 class="modal-title">@Html.Localize("modal_title_users")</h4>
             </div>
             <div class="modal-body">
-                @Html.LocalizationString("modal_body_users")
+                @Html.Localize("modal_body_users")
             </div>
             <div class="modal-footer">
-                <input type="button" class="btn btn-default" data-dismiss="modal" value="@Html.LocalizationString("btn_cancel")" />
-                <input type="button" class="btn" value="@Html.LocalizationString("btn_ok")" id="btnModalAction" data-id="" data-isactive="" />
+                <input type="button" class="btn btn-default" data-dismiss="modal" value="@Html.Localize("btn_cancel")" />
+                <input type="button" class="btn" value="@Html.Localize("btn_ok")" id="btnModalAction" data-id="" data-isactive="" />
             </div>
         </div>
     </div>
@@ -96,8 +96,8 @@
 {
     <script>
         $(function () {
-            var textActivate = "@Html.LocalizationString("btn_activate")";
-            var textDeactivate = "@Html.LocalizationString("btn_deactivate")";
+            var textActivate = "@Html.Localize("btn_activate")";
+            var textDeactivate = "@Html.Localize("btn_deactivate")";
 
             var textBtnDanger = "btn-danger";
             var textBtnSuccess = "btn-success";
