--- a/sources/set.web/Views/User/New.cshtml
+++ b/sources/set.web/Views/User/New.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UserModel
 
 @{
-    ViewBag.Title = Html.LocalizationString("new_user_title");
+    ViewBag.Title = Html.Localize("new_user_title");
 }
 
 <div role="main">
@@ -13,23 +13,23 @@
 
             <form method="post">
                 <div class="form-group">
-                    <label for="Name">@Html.LocalizationString("name")</label>
+                    <label for="Name">@Html.Localize("name")</label>
                     <input type="text" id="Name" name="Name" class="form-control" required value="@Model.Name" />
                 </div>
 
                 <div class="form-group">
-                    <label for="Email">@Html.LocalizationString("email")</label>
+                    <label for="Email">@Html.Localize("email")</label>
                     <input type="email" id="Email" name="Email" class="form-control" required value="@Model.Email" />
                 </div>
 
                 <div class="form-group">
-                    <label for="Password">@Html.LocalizationString("password")</label>
+                    <label for="Password">@Html.Localize("password")</label>
                     <input type="password" id="Password" name="Password" class="form-control" required value="@Model.Password" />
                 </div>
 
                 @Html.AntiForgeryToken()
 
-                <button type="submit" class="btn btn-primary">@Html.LocalizationString("btn_sign_up")</button>
+                <button type="submit" class="btn btn-primary">@Html.Localize("btn_sign_up")</button>
 
                 <div class="error">
                     @Model.Msg
