--- a/sources/set.web/Views/User/PasswordReset.cshtml
+++ b/sources/set.web/Views/User/PasswordReset.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PasswordResetModel
 
 @{
-    ViewBag.Title = Html.LocalizationString("password_reset_title"); ;
+    ViewBag.Title = Html.Localize("password_reset_title"); ;
 }
 
 <div class="row">
@@ -17,13 +17,13 @@
         <form method="post">
             
             <div class="form-group">
-                <label for="Email">@Html.LocalizationString("email")</label>
+                <label for="Email">@Html.Localize("email")</label>
                 <input type="email" id="Email" name="Email" class="form-control" required value="@Model.Email" />
             </div>
 
             @Html.AntiForgeryToken()
 
-            <button type="submit" class="btn btn-primary">@Html.LocalizationString("btn_send_password_reset_link")</button>
+            <button type="submit" class="btn btn-primary">@Html.Localize("btn_send_password_reset_link")</button>
 
         </form>
 
